<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">IQWealth</string>
    <string name="title_activity_main">IQWealth</string>
    <string name="package_name">com.iraqsm.app</string>
    <string name="custom_url_scheme">com.iraqsm.app</string>
    <!-- Home-screen widgets (PriceWidget / PriceWidgetWide). Arabic, like the app. -->
    <string name="widget_small_label">سعر الدولار في العراق</string>
    <string name="widget_wide_label">الدولار والذهب والبورصة</string>
    <string name="w_dollar">الدولار · الكفاح</string>
    <string name="w_dollar_short">الدولار</string>
    <string name="w_per_hundred">لكل 100$: %1$s</string>
    <string name="w_gold">الذهب</string>
    <string name="w_gold_sub">مثقال عيار 21</string>
    <string name="w_isx">البورصة</string>
    <string name="w_isx_sub">ISX60</string>
    <string name="w_updated">تحديث %1$s</string>
    <string name="w_kifah">بورصة الكفاح</string>
    <string name="w_vs_yesterday">%1$s عن أمس</string>
    <string name="w_hundred">100$ = %1$s</string>
    <string name="w_settings">إعدادات الويدجت</string>
    <string name="w_not_traded">لم يُتداول اليوم</string>
    <string name="w_per_dollar">دينار للدولار</string>
    <string name="w_mithqal_karat">مثقال عيار %1$d</string>
    <string name="w_loading">جارٍ التحميل…</string>
</resources>
